--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -1,2 +1,12 @@
-$primary-background: #FFFFFF;
+// ELEMENTS:
+$primary-background: #f9f9f9;
 $secondary-background: #34e2ff;
+
+// COLORS:
+$turing-gray: #4C4D4F;
+  // To match Turing logo
+
+
+// FONTS:
+$primary-font: 'Questrial', sans-serif;
+$secondary-font: 'Bebas Neue', cursive;
