--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -7,7 +7,7 @@
 
 html {
   z-index: 1;
-  height: 93vh;
+  height: 95vh;
   border-top: 1rem solid $secondary-background;
   border-bottom: 1rem solid $secondary-background;
 }
@@ -18,16 +18,9 @@ body {
   margin-left: 1rem;
   margin-right: 1rem;
   background: $primary-background;
+  background-color: #f4f4f4;
   font-family: $primary-font;
 }
-
-// .background-image {
-//   z-index: -1;
-//   position: absolute;
-//   margin: -5rem;
-//   height: 93vh;
-//   opacity: 80%;
-// }
 
 .logo-container {
   display: flex;
@@ -68,6 +61,8 @@ body {
 .dashboard-text {
   h1 {
     margin: 0px;
+    margin-top: .5rem;
+    margin-left: 4rem;
     margin-bottom: .5rem;
   }
 }
@@ -82,13 +77,7 @@ body {
   display: grid;
   grid-template-columns: repeat(2, 35rem);
   grid-auto-rows: 35rem;
-  margin: 2rem;
-  margin-top: 1rem;
-  margin-bottom: 0rem;
-  padding: 1rem;
-  padding-left: 2rem;
-  background-color: white;
-  box-shadow: 2px 2px 2px 2px $turing-gray;
+  @include box();
 
   .booking-history {
     border-right: 1px solid $turing-gray;
@@ -106,6 +95,112 @@ body {
   }
 }
 
+.choose-a-date {
+  position: absolute;
+  right: 5%;
+  top: 12%;
+
+  button {
+    border: 1px solid #f4f4f4;
+    border-radius: .3rem;
+    background-color: #f4f4f4;
+    padding: 0px;
+    padding-left: .8rem;
+    padding-right: .8rem;
+    cursor: pointer;
+
+    &:hover {
+      border: 1px solid #ff652d;
+    }
+
+    &:active {
+      background-color: #ff652d;
+      border: 0px;
+
+      h2 {
+        color: white;
+      }
+    }
+  }
+
+  h2 {
+    color: #ff652d;
+  }
+}
+
+.booking-form-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.booking-form {
+  padding: 2rem;
+  flex-direction: column;
+  justify-content: center;
+  @include box();
+  height: 36rem;
+  width: 55rem;
+  margin-top: 3rem;
+  background-color: #fff9f7;
+}
+
+.room-search {
+  margin-top: 1rem;
+  padding: .5rem;
+  color: white;
+  background-color: $blood-orange;
+  border: 0px;
+  border-radius: .3rem;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #09a6b7;
+  }
+
+  &:active {
+    background-color: #0fe5ff;
+    border: 0px;
+  }
+}
+
+.available-rooms-display {
+  justify-content: center;
+  margin: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  border: 1px solid black;
+  background-color: #fefefe;
+  height: 90%;
+  width: 90%;
+  overflow-y: scroll;
+}
+
+.available-room {
+  background-color: #d3faff;
+  padding: .8rem;
+  padding-top: .2rem;
+  padding-bottom: 1rem;
+  margin: .3rem;
+}
+
+.book-this-room {
+  border: 0px;
+  border-radius: .3rem;
+  padding: .4rem;
+  color: white;
+  background-color: #14aebc;
+  cursor: pointer;
+
+  &:hover {;
+    background-color: #067e89;
+  }
+
+  &:active {
+    background-color: $blood-orange;
+  }
+}
+
 footer {
   position: static;
   height: 1rem;
@@ -115,4 +210,8 @@ footer {
 
 .dyslexic {
   font-family: Helvetica;
+}
+
+.hidden {
+  display: none;
 }
