--- a/src/css/main.css
+++ b/src/css/main.css
@@ -56,6 +56,7 @@ body {
   height: 5rem;
   width: 5rem;
   object-fit: contain;
+  cursor: pointer;
 }
 .logo-container img {
   position: static;
@@ -75,10 +76,20 @@ body {
 }
 .logo-container .slogan {
   position: absolute;
-  right: 5%;
+  right: 4%;
   color: #4C4D4F;
   font-family: "Bebas Neue", cursive;
   margin-bottom: 2rem;
+}
+
+.green-accent {
+  position: absolute;
+  z-index: -1;
+  margin-top: 1rem;
+  height: 24rem;
+  width: 15rem;
+  background-color: #bcffd7;
+  opacity: 70%;
 }
 
 .dashboard-text h1 {
@@ -221,6 +232,12 @@ body {
 }
 .book-this-room:active {
   background-color: #ff652d;
+}
+
+.booking-confirmation {
+  margin-left: 1rem;
+  color: #ff652d;
+  font-style: italic;
 }
 
 footer {
