--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -43,6 +43,14 @@ body {
     width: 25rem;
     padding: 1rem;
 
+    .username-error,
+    .password-error {
+      font-style: italic;
+      margin-top: -1rem;
+      padding: .2rem;
+      color: #ffede8;
+    }
+
     input {
       margin-bottom: 1rem;
     }
@@ -54,6 +62,15 @@ body {
       border-radius: .2rem;
       background-color: #f77347;
       cursor: pointer;
+
+      &:hover {
+        background-color: #f23f09;
+      }
+
+      &:active {
+        background-color: white;
+        color: #f23f09;
+      }
     }
   }
 }
