--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -116,7 +116,7 @@ body {
   position: absolute;
   z-index: -1;
   margin-top: 1rem;
-  height: 24rem;
+  height: 22rem;
   width: 15rem;
   background-color: #bcffd7;
   opacity: 70%;
@@ -146,17 +146,44 @@ body {
   .booking-history {
     border-right: 1px solid $turing-gray;
     padding-right: 2rem;
+    overflow-y: scroll;
+
+    .bookings-display {
+      article {
+        border-bottom: 1px solid $secondary-background;
+        width: 60%;
+      }
+    }
+  }
+
+  .expenditures-container {
+    overflow-y: scroll;
   }
 
   .expenditures {
     padding-left: 2rem;
     padding-right: 2rem;
+    overflow-y: scroll;
+  }
+
+  .expenditures-display {
+    overflow-y: scroll;
+
+    h3, h4 {
+      margin-bottom: 1rem;
+      margin-top: 1rem;
+      padding: 0px;
+    }
   }
 
   h2 {
     border-bottom: 1px solid $turing-gray;
     padding-bottom: .5rem;
   }
+}
+
+.emphasized {
+  color: $blood-orange;
 }
 
 .choose-a-date {
